--- a/CarespotASP/Views/Shared/_Layout.cshtml
+++ b/CarespotASP/Views/Shared/_Layout.cshtml
@@ -7,6 +7,8 @@
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
     <link href="https://fonts.googleapis.com/css?family=Lato:400,700|Merriweather+Sans" rel="stylesheet">
+    @*<link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" />*@
+    <link href="https://cdn.datatables.net/1.10.15/css/dataTables.bootstrap.min.css" rel="stylesheet" />
 </head>
 <body>
     <div class="navbar navbar-inverse navbar-fixed-top">
@@ -38,6 +40,8 @@
 
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
+    @Scripts.Render("//cdn.datatables.net/1.10.15/js/jquery.dataTables.min.js")
+    @Scripts.Render("/Scripts/Site.js")
     @RenderSection("scripts", required: false)
 </body>
 </html>
