--- a/CarespotASP/Content/Site.css
+++ b/CarespotASP/Content/Site.css
@@ -56,3 +56,32 @@ textarea {
 .btn-keuze {
     padding: 15%;
 }
+
+/*registreet CSS*/
+.registreer-header {
+    border-bottom: 2px solid #000000;
+    padding-bottom: 10px;
+    text-transform: uppercase;
+}
+
+.select {
+    width: 100%;
+    padding: 5%;
+}
+
+.checkbox-registreer {
+    width: 40%;
+    
+}
+
+.btn-registreer {
+    width: 100%;
+}
+
+.label-registreer {
+    width: 100%;
+}
+
+.label-registreer > input {
+    margin-right: 5%;
+}
