--- a/CarespotASP/Views/Gebruiker/NieuwGebruiker.cshtml
+++ b/CarespotASP/Views/Gebruiker/NieuwGebruiker.cshtml
@@ -103,6 +103,6 @@
         </div>
     </div>
     <div>
-        <input class="btn btn-primary" type="submit" value="Submit">
+        <button type="button" class="btn btn-default navbar-btn">Maak deze gebruiker aan</button>
     </div>
 }
