--- a/CarespotASP/Views/Beoordeling/NieuwBeoordeling.cshtml
+++ b/CarespotASP/Views/Beoordeling/NieuwBeoordeling.cshtml
@@ -15,6 +15,7 @@
     <div class="form-group">
         <label for="comment">Recensie:</label>
         <textarea class="form-control" rows="5" id="comment" placeholder="Recensie"></textarea>
+        <input type="number" name="quantity" min="1" max="10"><br/>
         <button type="button" class="btn btn-default navbar-btn">Beoordeling insturen</button>
     </div>
 }
