--- a/CarespotASP/Views/Registreer/Registreer.cshtml
+++ b/CarespotASP/Views/Registreer/Registreer.cshtml
@@ -99,6 +99,10 @@
                     <div class="form-group">
                         <input id="geboortedatum" name="geboortedatum" class="form-control" type="date" placeholder="" required/>
                     </div>
+                    <p>Barcode</p>
+                <div class="form-group">
+                    <input name="barcode" class="form-control" type="text"/>
+                </div>
                     <p>VOG</p>
                     <div class="form-group" id="vog">
                         <input class="btn btn-default btn-registreer" type="file" name="vog" id="voginput"/>Upload
