--- a/CarespotASP/Views/Hulpbehoevende/Opdrachten.cshtml
+++ b/CarespotASP/Views/Hulpbehoevende/Opdrachten.cshtml
@@ -37,7 +37,7 @@
                         </form>
                     </td>
                     <td>
-                        <form action="/Hulpbehoevende/DeleteHulpvraag/@hulpvraag.Id" method="GET">
+                        <form action="/Hulpvraag/DeleteHulpvraag/@hulpvraag.Id" method="GET">
                             <button type="submit" class="btn btn-danger">Verwijder</button>
                         </form>
                     </td>
@@ -47,5 +47,5 @@
         </table>
     </div>
     <br/>
-    <button type="button" class="btn btn-default btn-lg pull-right">Nieuwe opdracht</button>
+    <button onclick="location.href='/Hulpbehoevende/NieuweOpdracht'" type="button" class="btn btn-default btn-lg pull-right">Nieuwe opdracht</button>
 </div>
