--- a/CarespotASP/Views/Registreer/Registreer.cshtml
+++ b/CarespotASP/Views/Registreer/Registreer.cshtml
@@ -69,7 +69,7 @@
                     </div>
                     <p>Foto</p>
                     <div class="form-group">
-                        <input class="btn btn-default btn-registreer" type="file" name="foto"/>Upload
+                        <input class="btn btn-default btn-registreer" type="file" name="foto"/>
                     </div>
                 </div>
 
@@ -105,7 +105,7 @@
                 </div>
                     <p>VOG</p>
                     <div class="form-group" id="vog">
-                        <input class="btn btn-default btn-registreer" type="file" name="vog" id="voginput"/>Upload
+                        <input class="btn btn-default btn-registreer" type="file" name="vog" id="voginput"/>
                     </div>
                 </div>
 
