--- a/CarespotASP/Views/Beheerder/Index.cshtml
+++ b/CarespotASP/Views/Beheerder/Index.cshtml
@@ -15,19 +15,17 @@
                     <th>Titel</th>
                     <th>Aanmaakdatum</th>
                     <th>Opdrachtdatum</th>
-                    <th>Open</th>
                 </tr>
             </thead>
             <tbody>
                 @foreach (Hulpvraag item in Model.LstHulpvraag)
             {
                     <tr>
-                        <td>@item.Titel</td>
+                        <td>
+                            @Html.ActionLink("" + Html.DisplayFor(modelItem => item.Titel) + "", "Details", new { id = item.Id })
+                        </td>
                         <td>@item.CreateDatum</td>
                         <td>@item.OpdrachtDatum</td>
-                        <td>
-                            <button type="button">Open</button>
-                        </td>
                     </tr>
                 }
             </tbody>
@@ -35,9 +33,10 @@
     </div>
     <div class="col-md-4">
         <h3 class="text-center">VOG bevestigingen</h3>
-        <table id="vog" class="table table-striped table-bordered" width="100%" cellspacing="0">
+        <table id="goedkeuren" class="table table-striped table-bordered" width="100%" cellspacing="0">
             <thead>
                 <tr>
+                    <th>ID</th>
                     <th>Naam</th>
                     <th>VOG</th>
                     <th>Accepteren</th>
@@ -53,6 +52,7 @@
                         if (v.IsGoedgekeurd == false)
                         {
                             <tr>
+                                <td>@v.Id</td>
                                 <td>@v.Naam</td>
                                 <td>@v.VOG</td>
                                 <td>
@@ -73,6 +73,7 @@
         <table id="gebruikers" class="table table-striped table-bordered" width="100%" cellspacing="0">
             <thead>
                 <tr>
+                    <th>ID</th>
                     <th>Naam</th>
                     <th>Functie</th>
                     <th>Verwijderen</th>
@@ -82,6 +83,7 @@
                 @foreach (Gebruiker item in Model.LstGebruiker)
             {
                     <tr>
+                        <td>@item.Id</td>
                         <td>@item.Naam</td>
                         <td>@item.GetType().Name</td>
                         <td>
