vog pdf laten zien in browser

--- a/CarespotASP/Views/Beheerder/Index.cshtml
+++ b/CarespotASP/Views/Beheerder/Index.cshtml
@@ -54,7 +54,7 @@
                             <tr>
                                 <td>@v.Id</td>
                                 <td>@v.Naam</td>
-                                <td>@v.VOG</td>
+                                <td><a href="@v.VOG" target="_blank">VOG</a></td>
                                 <td>
                                     <button type="button">Open</button>
                                 </td>
