--- a/CarespotASP/Views/Hulpbehoevende/NieuweOpdracht.cshtml
+++ b/CarespotASP/Views/Hulpbehoevende/NieuweOpdracht.cshtml
@@ -36,10 +36,10 @@
                 <div class="form-group">
                     <label>Vervoertype:</label>
                     <select class="form-control" name="vervoertype">
-                        <option>n.v.t</option>
-                        <option>Auto</option>
-                        <option>Fiets</option>
-                        <option>OV</option>
+                        <option value="Nvt" selected>N.v.t</option>
+                        <option value="Auto">Auto</option>
+                        <option value="Fiets">Fiets</option>
+                        <option value="OV">OV</option>
                     </select>
                 </div>
             </div>
