--- a/CarespotASP/Views/Vrijwilliger/Hoofdscherm.cshtml
+++ b/CarespotASP/Views/Vrijwilliger/Hoofdscherm.cshtml
@@ -1,7 +1,45 @@
-﻿
+﻿@using CarespotASP.Models
+
 @{
-    ViewBag.Title = "Hoofdscherm";
+    ViewBag.Title = "Opdrachten";
 }
 
-<h2>Hoofdscherm</h2>
-
+<div class="row">
+    <div class="col-md-12 login">
+        <h2>Mijn opdrachten</h2>
+    </div>
+    <div class="col-md-12">
+        <table id="example" class="table table-striped table-bordered" width="100%" cellspacing="0">
+            <thead>
+                <tr>
+                    <th>Titel</th>
+                    <th>Geplaatst op</th>
+                    <th></th>
+                </tr>
+            </thead>
+            <tfoot>
+                <tr>
+                    <th>Titel</th>
+                    <th>Geplaatst op</th>
+                    <th></th>
+                </tr>
+            </tfoot>
+            <tbody>
+                @foreach (Hulpvraag hulpvraag in ViewBag.hulpvragen)
+            {
+                    <tr>
+                        <td>@hulpvraag.Titel</td>
+                        <td>@hulpvraag.CreateDatum</td>
+                        <td>
+                            <form action="" method="GET">
+                                <button type="submit" class="btn btn-primary">Open</button>
+                            </form>
+                        </td>
+                    </tr>
+                }
+            </tbody>
+        </table>
+    </div>
+    <br />
+    <button onclick="location.href='/Vrijwilliger/OpdrachtOverzicht'" type="button" class="btn btn-default btn-lg pull-right">Nieuwe opdrachten zoeken</button>
+</div>
