Aanpassingen aan keuzescherm

--- a/CarespotASP/Views/Hulpverlener/Hulpverlener.cshtml
+++ b/CarespotASP/Views/Hulpverlener/Hulpverlener.cshtml
@@ -60,9 +60,9 @@
                      <td>@hulpvraag.Titel</td>
                      <td>@hulpvraag.CreateDatum</td>
                      <td>
-                         <form action="hulpbehoevende" method="GET">
-                             <button type="submit" class="btn btn-primary">Open</button>
-                         </form>
+                         
+                         <a class="btn btn-primary" href="/Hulpvraag/Details/@hulpvraag.Id">Open</a>
+                   
                      </td>             
                  </tr>
              }
